force-app/main/default/objects/Project__c/fields/Description_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Project__c</fullName>
    <inlineHelpText>Description of a project involved in COC(Blanket)</inlineHelpText>
    <label>Description of Project</label>
    <type>TextArea</type>
</CustomField>