force-app/main/default/objects/Project__c/fields/Estimated_Project_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Project_Value__c</fullName>
    <inlineHelpText>Estimated project value of a project</inlineHelpText>
    <label>Estimated Project Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>