force-app/main/default/objects/Project__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Policy of a project</inlineHelpText>
    <label>Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>