force-app/main/default/objects/Project__c/fields/Project_Risk_Address__c.field-meta.xml
<CustomField>
    <fullName>Project_Risk_Address__c</fullName>
    <inlineHelpText>Address of a project involved in COC(Blanket)</inlineHelpText>
    <label>Project / Risk Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>