force-app/main/default/objects/Project__c/recordTypes/Project_Policy.recordType-meta.xml
<RecordType>
    <fullName>Project_Policy</fullName>
    <active>true</active>
    <description>Represent project details of policy</description>
    <label>Project of Policy</label>
</RecordType>