force-app/main/default/objects/Project__c/recordTypes/Project_Quote.recordType-meta.xml
<RecordType>
    <fullName>Project_Quote</fullName>
    <active>true</active>
    <description>Represent project details of quote</description>
    <label>Project of Quote</label>
</RecordType>