force-app/main/default/objects/Project__c/validationRules/Policy_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Policy_Project</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName ==&quot;Project_Quote&quot;, 
Policy__r.RecordType.DeveloperName =&quot;Non_Program_Policy&quot;)</errorConditionFormula>
    <errorMessage>You cannot create a Project of Quote from Policy</errorMessage>
</ValidationRule>