force-app/main/default/objects/Project__c/validationRules/Quote_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Project</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &quot;Project_Policy&quot;, Quote__r.RecordType.DeveloperName ==&quot;Non_Program_Quote&quot;)</errorConditionFormula>
    <errorMessage>You cannot create a Project of Policy from Quote</errorMessage>
</ValidationRule>